# fluent-old

./: .gitignore  .syntastic_cpp_config  .travis.yml  README.md
src/: CMakeLists.txt
src/black_boxes/: CMakeLists.txt  key_value.h  key_value_client.cc  key_value_server.cc  primality_server.cc  random_id_generator.h
src/cmake/: benchmarking.cmake  grpc.cmake  grpc_shim.cmake  protobuf.cmake  testing.cmake
src/cmake/modules/: FindGlog.cmake
src/collections/: CMakeLists.txt  all.h  channel.h  channel_test.cc  collection.h  collection_tuple_ids.h  collection_util.cc  collection_util.h  collection_util_test.cc  periodic.h  periodic_test.cc  scratch.h  scratch_test.cc  stdin.h  stdin_test.cc  stdout.h  stdout_test.cc  table.h  table_test.cc  util.h
src/common/: CMakeLists.txt  cereal_pickler.h  cereal_pickler_test.cc  collection_util.h  collection_util_test.cc  concurrent_queue.h  error_code.cc  error_code.h  file_util.cc  file_util.h  function_traits.h  hash_util.h  hash_util_test.cc  macros.h  macros_test.cc  mock_pickler.h  mock_pickler_test.cc  rand_util.cc  rand_util.h  rand_util_test.cc  random_id_generator.h  sizet_list.h  sizet_list_test.cc  static_assert.h  static_assert_test.cc  status.cc  status.h  status_macros.h  status_or.h  string_util.cc  string_util.h  string_util_test.cc  time_util.h  time_util_test.cc  tuple_util.h  tuple_util_test.cc  type_list.h  type_list_test.cc  type_traits.h  type_traits_test.cc
src/example/: CMakeLists.txt  count.cc  count.h  count_bench.cc  count_test.cc
src/examples/: CMakeLists.txt  README.md
src/examples/black_boxes/: CMakeLists.txt  README.md  key_value.h  key_value_client.cc  key_value_server.cc  primality.h  primality_client.cc  primality_server.cc  random_id_generator.h  redis.h  redis_client.cc  redis_server.cc
src/examples/cassandra/: CMakeLists.txt  README.md  api.h  benchmark_client_getter.cc  benchmark_client_setter.cc  client.cc  launch_cassandra.sh  launch_cassandra_benchmark.sh  lineage_accuracy.py  reset_database.cql  server.cc  workloads.cc  workloads.h  wrappers.h
src/examples/chat/: CMakeLists.txt  README.md  chat_client.cc  chat_server.cc  client.cc  client.h  launch_chat_service.sh  lineage_client.cc  lineage_ping_client.cc  lineage_server.cc  noop_client.cc  noop_ping_client.cc  noop_server.cc  ping_client.cc  ping_client.h  server.cc  server.h
src/examples/distributed_key_value_store/: CMakeLists.txt  client.cc  client.h  command_line_client.cc  fluent_api.h  fluent_client.cc  fluent_server.cc  launch_distributed_key_value_store.sh  launch_distributed_key_value_store_fluent.sh  server.cc
src/examples/distributed_kvs/: CMakeLists.txt  api.proto  client.cc  client.h  command_line_client.cc  fluent_api.h  fluent_client.cc  fluent_server.cc  launch_distributed_kvs.sh  launch_distributed_kvs_no_fluent.sh  server.cc
src/examples/file_system/: CMakeLists.txt  client.cc  file_system.h  fluent_client.cc  fluent_server.cc  launch_file_system.sh  lineage.py  server.cc  string_store.cc  string_store.h  string_store_test.cc
src/examples/fluent_kvs/: CMakeLists.txt  client.cc  launch_kvs.sh  server.cc
src/examples/grpc/: CMakeLists.txt  api.proto  client.cc  fluent_client.cc  fluent_server.cc  handwritten_api.h  handwritten_fluent_client.cc  handwritten_fluent_server.cc  launch_grpc.sh  launch_handwritten_grpc.sh  server.cc
src/examples/hello_world/: CMakeLists.txt  hello_world.cc  hello_world_lineage.cc
src/examples/indy/: CMakeLists.txt  client.cc  server.cc
src/examples/key_value_store/: CMakeLists.txt  README.md  client.cc  key_value.h  key_value_server.cc  (+1 more)
src/fluent/: CMakeLists.txt  README.md  base_lattice.h  bool_lattice.h  bool_lattice_test.cc  channel.h  channel_test.cc  collection.h  collection_builder.h  collection_builder_test.cc  collection_test.cc  collection_util.cc  collection_util.h  collection_util_test.cc  driver.h  driver_test.cc  fluent.h  fluent_builder.h  fluent_builder_test.cc  fluent_executor.h  fluent_executor_test.cc  infix.h  infix_test.cc  lattices.h  local_tuple_id.h  lww_lattice.h  lww_lattice_test.cc  map_lattice.h  map_lattice_test.cc  max_lattice.h  max_lattice_test.cc  min_lattice.h  min_lattice_test.cc  mock_pickler.h  mock_pickler_test.cc  network_state.h  periodic.h  rule.h  rule_tags.h  rule_test.cc  (+15 more)
src/frontend/: .gitignore  README.md  index.html  main.py
src/lineagedb/: CMakeLists.txt  README.md  async_pqxx_client.h  connection_config.cc  connection_config.h  mock_client.h  mock_client_test.cc  mock_connection.h  mock_pqxx_client.h  mock_pqxx_client_test.cc  mock_to_sql.h  mock_to_sql_test.cc  mock_work.h  noop_client.h  pqxx_client.h  to_sql.h  to_sql_test.cc
src/postgres/: CMakeLists.txt  README.md  client.h  connection_config.cc  connection_config.h  constants.cc  constants.h  mock_client.h  mock_client_test.cc  mock_connection.h  mock_pqxx_client.h  mock_pqxx_client_test.cc  mock_to_sql.h  mock_to_sql_test.cc  mock_work.h  noop_client.h  pqxx_client.cc  pqxx_client.h  sql_type.h  sql_type_test.cc  to_sql.h  to_sql_test.cc
src/ra/: CMakeLists.txt  README.md  aggregates.h  all.h  all_test.cc  avg.h  avg_test.cc  batch.h  batch_test.cc  const.h  const_test.cc  count.h  count_test.cc  cross.h  cross_test.cc  filter.h  filter_test.cc  group_by.h  group_by_test.cc  groupavg.h  groupavg_test.cc  groupby.h  groupby_test.cc  groupcount.h  groupcount_test.cc  groupsum.h  groupsum_test.cc  hash_fn.h  hash_join.h  hash_join_test.cc  id.h  id_test.cc  iterable.h  iterable_test.cc  keys.h  lineage_tuple.h  lineaged_tuple.h  logical_to_physical.h  logical_to_physical_test.cc  map.h  (+14 more)
src/relalg/: CMakeLists.txt  cross.h  cross_bench.cc  cross_test.cc  groupby_test.cc  project.h  project_bench.cc  project_test.cc  select.h  select_bench.cc  select_test.cc
src/shim_gen/: CMakeLists.txt
src/testing/: CMakeLists.txt  captured_stdout.h  captured_stdout_test.cc  mock_clock.cc  mock_clock.h  mock_clock_test.cc  test_util.h  test_util_test.cc
src/zmq_util/: CMakeLists.txt  socket_cache.cc  socket_cache.h  socket_cache_test.cc  zmq_util.cc  zmq_util.h
(+133 files in other folders)
