CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

ADD_LIBRARY(collections
    collection_util.cc)
TARGET_LINK_LIBRARIES(collections
    glog
    zmq
    zmq_util)

MACRO(CREATE_COLLECTIONS_TEST NAME)
    CREATE_NAMED_TEST(collections_${NAME} ${NAME})
    TARGET_LINK_LIBRARIES(collections_${NAME} collections)
ENDMACRO(CREATE_COLLECTIONS_TEST)

CREATE_COLLECTIONS_TEST(channel_test)
CREATE_COLLECTIONS_TEST(periodic_test)
CREATE_COLLECTIONS_TEST(scratch_test)
CREATE_COLLECTIONS_TEST(stdin_test)
CREATE_COLLECTIONS_TEST(stdout_test)
CREATE_COLLECTIONS_TEST(table_test)
CREATE_COLLECTIONS_TEST(collection_util_test)
