CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

MACRO(CREATE_COMMON_TEST NAME)
    CREATE_NAMED_TEST(common_${NAME} ${NAME})
    TARGET_LINK_LIBRARIES(common_${NAME} glog)
ENDMACRO(CREATE_COMMON_TEST)

CREATE_COMMON_TEST(macros_test)
CREATE_COMMON_TEST(tuple_util_test)
CREATE_COMMON_TEST(type_list_test)
CREATE_COMMON_TEST(type_traits_test)
