CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

MACRO(CREATE_RA_TEST NAME)
    CREATE_NAMED_TEST(ra_${NAME} ${NAME})
ENDMACRO(CREATE_RA_TEST)

CREATE_RA_TEST(all_test)
CREATE_RA_TEST(count_test)
CREATE_RA_TEST(cross_test)
CREATE_RA_TEST(filter_test)
CREATE_RA_TEST(iterable_test)
CREATE_RA_TEST(map_test)

#ADD_SUBDIRECTORY(logical)
#ADD_SUBDIRECTORY(physical)
