CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

MACRO(CREATE_BLACK_BOX_EXECUTABLE NAME)
    ADD_EXECUTABLE(examples_black_boxes_${NAME} ${NAME}.cc)
    TARGET_LINK_LIBRARIES(examples_black_boxes_${NAME} fluent)
ENDMACRO(CREATE_BLACK_BOX_EXECUTABLE)

CREATE_BLACK_BOX_EXECUTABLE(key_value_client)
CREATE_BLACK_BOX_EXECUTABLE(key_value_server)
CREATE_BLACK_BOX_EXECUTABLE(primality_client)
CREATE_BLACK_BOX_EXECUTABLE(primality_server)
