CMAKE_MINIMUM_REQUIRED(VERSION 3.0)


MACRO(CREATE_CHAT_EXECUTABLE NAME)
    ADD_EXECUTABLE(examples_chat_${NAME} ${NAME})
    TARGET_LINK_LIBRARIES(examples_chat_${NAME} fluent)
    ADD_DEPENDENCIES(examples_chat_${NAME} fluent)
ENDMACRO(CREATE_CHAT_EXECUTABLE)

CREATE_CHAT_EXECUTABLE(noop_client)
CREATE_CHAT_EXECUTABLE(lineage_client)
CREATE_CHAT_EXECUTABLE(noop_server)
CREATE_CHAT_EXECUTABLE(lineage_server)
CREATE_CHAT_EXECUTABLE(noop_ping_client)
CREATE_CHAT_EXECUTABLE(lineage_ping_client)
