CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

MACRO(CREATE_FILE_SYSTEM_EXECUTABLE NAME)
    ADD_EXECUTABLE(examples_file_system_${NAME} ${NAME})
    TARGET_LINK_LIBRARIES(examples_file_system_${NAME} fluent)
    ADD_DEPENDENCIES(examples_file_system_${NAME} fluent)
ENDMACRO(CREATE_FILE_SYSTEM_EXECUTABLE)

CREATE_FILE_SYSTEM_EXECUTABLE(client)
CREATE_FILE_SYSTEM_EXECUTABLE(fluent_client)
CREATE_FILE_SYSTEM_EXECUTABLE(fluent_server)
CREATE_FILE_SYSTEM_EXECUTABLE(server)
