CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

MACRO(CREATE_KEY_VALUE_STORE_EXECUTABLE NAME)
    ADD_EXECUTABLE(examples_fluent_kvs_${NAME} ${NAME})
    TARGET_LINK_LIBRARIES(examples_fluent_kvs_${NAME} fluent)
    ADD_DEPENDENCIES(examples_fluent_kvs_${NAME} fluent)
ENDMACRO(CREATE_KEY_VALUE_STORE_EXECUTABLE)

CREATE_KEY_VALUE_STORE_EXECUTABLE(client)
CREATE_KEY_VALUE_STORE_EXECUTABLE(server)
