CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

MACRO(CREATE_RA_LOGICAL_TEST NAME)
    CREATE_NAMED_TEST(ra_logical_${NAME} ${NAME})
    TARGET_LINK_LIBRARIES(ra_logical_${NAME} fmt)
    ADD_DEPENDENCIES(ra_logical_${NAME} fmt)
ENDMACRO(CREATE_RA_LOGICAL_TEST)

CREATE_RA_LOGICAL_TEST(collection_test)
CREATE_RA_LOGICAL_TEST(cross_test)
CREATE_RA_LOGICAL_TEST(filter_test)
CREATE_RA_LOGICAL_TEST(group_by_test)
CREATE_RA_LOGICAL_TEST(hash_join_test)
CREATE_RA_LOGICAL_TEST(iterable_test)
CREATE_RA_LOGICAL_TEST(map_test)
CREATE_RA_LOGICAL_TEST(meta_collection_test)
CREATE_RA_LOGICAL_TEST(project_test)
CREATE_RA_LOGICAL_TEST(to_debug_string_test)
